# server

./: .gitignore  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  github.yml  pr_checkboxes.yml  pr_labels.yml
cmake/: CompilerWarnings.cmake  Platform.cmake  Sanitizers.cmake
documentation/: AI_Events.txt  battlefield_ids.txt  mods_by_id.txt
documentation/adls/: sol_refactoring.md
ext/: CMakeLists.txt
scripts/commands/: chocobo.lua
scripts/effects/: bane.lua  bind.lua  curse.lua  dodge.lua  focus.lua  impetus.lua  nocturne.lua  sange.lua  sengikori.lua  skillchain.lua  weakness.lua  yonin.lua
scripts/enum/: behavior.lua  immunity.lua  item.lua  mob_mod.lua  mod.lua  skill_rank.lua  title.lua
scripts/globals/: ability.lua  battlefield.lua  caskets.lua  chocobo.lua  chocobo_digging.lua  chocobo_racing.lua  chocobo_raising.lua  dark_ixion.lua  dealer_moogle.lua  deeds.lua  dynamis.lua  gear_sets.lua  helm.lua  instance.lua  mobs.lua  (+16 more)
sql/: abilities.sql  augments.sql  char_chocobos.sql  char_points.sql  char_unlocks.sql  guild_item_points.sql  item_basic.sql  item_equipment.sql  item_latents.sql  item_mods.sql  item_usable.sql  merits.sql  mob_droplist.sql  mob_groups.sql  mob_pool_mods.sql  mob_pools.sql  mob_skill_lists.sql  mob_skills.sql  mob_spawn_mods.sql  mob_spell_lists.sql  nm_spawn_points.sql  synth_recipes.sql  traits.sql
src/search/: CMakeLists.txt  data_loader.cpp  handler.h  main.cpp  search.cpp  search.h  search_handler.cpp  search_handler.h  search_server.cpp  search_server.h
tools/: requirements.txt
(+1070 files in other folders)
